creusot/tests/should_fail/prusti/traits/homes.stderr
error[creusot]: &'a mut X@'x cannot be moved to 'curr since it isn't copy
                caused by function call
  --> homes.rs:11:5
   |
11 |     fn model(self) -> Y {
   |     ^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

